fix answer in quiz: still empty space and the text height is 100% so the imGif not showing increase the wait time of popUp suggester for quiz in result from 5s up to 10s also increase the close btn of it from 2s up to 3.5s

--- a/frontend/static/css/base/_globals.scss
+++ b/frontend/static/css/base/_globals.scss
@@ -231,7 +231,7 @@ input {
         visibility: visible !important;
         opacity: 1 !important;
         transition: all .53s ease-in-out !important;
-        height: 100%;
+        height: auto;
     }
 
     &Hide {
